# demo-evil-itsdangerous

./: pyproject.toml
src/itsdangerous/: signer.py
