[project]
name = "demo-evil-itsdangerous"
description = "An evil version of the module to safely pass trusted data to untrusted environments and back, created to demo software supply chain vulnerabilities."
readme = "README.rst"
license = {file = "LICENSE.rst"}
maintainers = [{name = "Toby Murray", email = "toby.murray@unimelb.edu.au"}]
requires-python = ">=3.7"
dynamic = ["version"]


[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "itsdangerous"

[tool.flit.sdist]
include = [
    "docs/",
    "requirements/",
    "tests/",
    "CHANGES.rst",
    "tox.ini",
]
exclude = [
    "docs/_build/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # dateutil using datetime.utcfromtimestamp
    "ignore:datetime.utcfromtimestamp:DeprecationWarning:dateutil.tz.tz",
]

[tool.coverage.run]
branch = true
source = ["itsdangerous", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.7"
files = ["src/itsdangerous"]
show_error_codes = true
pretty = true
strict = true
local_partial_types = true
warn_unreachable = true
